One instance of LockedRoot and LockedSub per LockManager and thread to massively reduce allocations.
This could cause issues if code holds on to a Locked instance but is hopefully safe as it is designed to be used in try with resource block.